--- a/index.html
+++ b/index.html
@@ -182,5 +182,21 @@
     </section>
 
 </body>
+<footer>
+    <div class="footer-info">
+        <h1>Goal</h1>
+        <div class="footer-hr">
+            <hr>
+        </div>
+        <div class="footer-info-menu">
+            <a class="pointer" href="">About Us</a>
+            <a class="pointer" href="">Terms of Service</a>
+            <a class="pointer" href="">Privacy Policy</a>
+            <a class="pointer" href="">Privacy Setting</a>
+            <a class="pointer" href="">Goal App</a>
+            <a class="pointer" href="">Goal Live</a>
+        </div>
+    </div>
+</footer>
 
 </html>
