--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <section>
         <div class="head">
-            <div class="head-img">
+            <div class="heading-img">
                 <div class="head-data">
                     <h1>The greatest <br> show in the <br> earth</h1>
                     <p> With continental qualification pathways leading to an exciting finals event, it brings
