--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="head">
             <div class="heading-img">
                 <div class="head-data">
-                    <h1>The greatest <br> show in the <br> earth</h1>
+                    <h1>The greatest show in the earth</h1>
                     <p> With continental qualification pathways leading to an exciting finals event, it brings
                         fans
                         together around the passion and love for the game.</p>
@@ -40,13 +40,19 @@
         <div class="head2">
             <div class="upcoming">
                 <div class="upcoming1">
-                    <h4>Upcoming Match</h4>
+                    <a href="">
+                        <h4>Upcoming Match</h4>
+                    </a>
                 </div>
                 <div class="upcoming1">
-                    <h4>All Group</h4>
+                    <a href="">
+                        <h4>All Group</h4>
+                    </a>
                 </div>
                 <div class="upcoming1">
-                    <p>Blogs</p>
+                    <a href="">
+                        <h4>Blogs</h4>
+                    </a>
                 </div>
             </div>
             <div class="img-info-head">
@@ -60,7 +66,7 @@
                             <a><i class="fa-solid fa-clock"></i> 10h</a>
                         </div>
                         <div class="chat">
-                            <a><i class="fa-solid fa-comment-dots"></i> 10h</a>
+                            <a><i class="fa-solid fa-comment-dots"></i> 43</a>
                         </div>
                     </div>
                 </div>
@@ -74,7 +80,7 @@
                             <a><i class="fa-solid fa-clock"></i> 10h</a>
                         </div>
                         <div class="chat">
-                            <a><i class="fa-solid fa-comment-dots"></i> 10h</a>
+                            <a><i class="fa-solid fa-comment-dots"></i> 54</a>
                         </div>
                     </div>
                 </div>
@@ -88,7 +94,7 @@
                             <a><i class="fa-solid fa-clock"></i> 10h</a>
                         </div>
                         <div class="chat">
-                            <a><i class="fa-solid fa-comment-dots"></i> 10h</a>
+                            <a><i class="fa-solid fa-comment-dots"></i> 64</a>
                         </div>
                     </div>
                 </div>
@@ -102,7 +108,7 @@
                             <a><i class="fa-solid fa-clock"></i> 10h</a>
                         </div>
                         <div class="chat">
-                            <a><i class="fa-solid fa-comment-dots"></i> 10h</a>
+                            <a><i class="fa-solid fa-comment-dots"></i> 72</a>
                         </div>
                     </div>
                 </div>
@@ -116,7 +122,7 @@
                             <a><i class="fa-solid fa-clock"></i> 10h</a>
                         </div>
                         <div class="chat">
-                            <a><i class="fa-solid fa-comment-dots"></i> 10h</a>
+                            <a><i class="fa-solid fa-comment-dots"></i> 90</a>
                         </div>
                     </div>
                 </div>
@@ -130,7 +136,7 @@
                             <a><i class="fa-solid fa-clock"></i> 10h</a>
                         </div>
                         <div class="chat">
-                            <a><i class="fa-solid fa-comment-dots"></i> 10h</a>
+                            <a><i class="fa-solid fa-comment-dots"></i> 86</a>
                         </div>
                     </div>
                 </div>
@@ -144,7 +150,7 @@
                             <a><i class="fa-solid fa-clock"></i> 10h</a>
                         </div>
                         <div class="chat">
-                            <a><i class="fa-solid fa-comment-dots"></i> 10h</a>
+                            <a><i class="fa-solid fa-comment-dots"></i> 72</a>
                         </div>
                     </div>
                 </div>
@@ -158,7 +164,7 @@
                             <a><i class="fa-solid fa-clock"></i> 10h</a>
                         </div>
                         <div class="chat">
-                            <a><i class="fa-solid fa-comment-dots"></i> 10h</a>
+                            <a><i class="fa-solid fa-comment-dots"></i> 65</a>
                         </div>
                     </div>
                 </div>
@@ -172,7 +178,7 @@
                             <a><i class="fa-solid fa-clock"></i> 10h</a>
                         </div>
                         <div class="chat">
-                            <a><i class="fa-solid fa-comment-dots"></i> 10h</a>
+                            <a><i class="fa-solid fa-comment-dots"></i> 78</a>
                         </div>
                     </div>
                 </div>
