--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p> With continental qualification pathways leading to an exciting finals event, it brings
                         fans
                         together around the passion and love for the game.</p>
-                    <a href="">Watch Live <i class="fa-solid fa-circle-arrow-right"></i></a>
+                    <a class="watch-btn" href="">Watch Live <i class="fa-solid fa-circle-arrow-right"></i></a>
                 </div>
                 <div class="head-img">
                     <img src="images/Banner Image.png" alt="">
