--- a/index.html
+++ b/index.html
@@ -202,6 +202,16 @@
             <a class="pointer" href="">Goal App</a>
             <a class="pointer" href="">Goal Live</a>
         </div>
+        <div class="media">
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-google-plus-g"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+            <a href=""><i class="fa-brands fa-whatsapp"></i></i></a>
+            <a href=""><i class="fa-brands fa-facebook-messenger"></i></i></a>
+            <a href=""><i class="fa-solid fa-envelope"></i></a>
+            <a href=""><i class="fa-solid fa-phone-flip"></i></a>
+        </div>
     </div>
 </footer>
 
