--- a/index.html
+++ b/index.html
@@ -189,30 +189,31 @@
 
 </body>
 <footer>
-    <div class="footer-info">
-        <h1>Goal</h1>
-        <div class="footer-hr">
-            <hr>
+    <footer>
+        <div class="footer-info">
+            <h1>Goal</h1>
+            <div class="footer-hr">
+                <hr>
+            </div>
+            <div class="footer-info-menu">
+                <a class="pointer" href="">About Us</a>
+                <a class="pointer" href="">Terms of Service</a>
+                <a class="pointer" href="">Privacy Policy</a>
+                <a class="pointer" href="">Privacy Setting</a>
+                <a class="pointer" href="">Goal App</a>
+                <a class="pointer" href="">Goal Live</a>
+            </div>
+            <div class="media">
+                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                <a href=""><i class="fa-brands fa-google-plus-g"></i></a>
+                <a href=""><i class="fa-brands fa-youtube"></i></a>
+                <a href=""><i class="fa-brands fa-whatsapp"></i></i></a>
+                <a href=""><i class="fa-brands fa-facebook-messenger"></i></i></a>
+                <a href=""><i class="fa-solid fa-envelope"></i></a>
+                <a href=""><i class="fa-solid fa-phone-flip"></i></a>
+            </div>
         </div>
-        <div class="footer-info-menu">
-            <a class="pointer" href="">About Us</a>
-            <a class="pointer" href="">Terms of Service</a>
-            <a class="pointer" href="">Privacy Policy</a>
-            <a class="pointer" href="">Privacy Setting</a>
-            <a class="pointer" href="">Goal App</a>
-            <a class="pointer" href="">Goal Live</a>
-        </div>
-        <div class="media">
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-twitter"></i></a>
-            <a href=""><i class="fa-brands fa-google-plus-g"></i></a>
-            <a href=""><i class="fa-brands fa-youtube"></i></a>
-            <a href=""><i class="fa-brands fa-whatsapp"></i></i></a>
-            <a href=""><i class="fa-brands fa-facebook-messenger"></i></i></a>
-            <a href=""><i class="fa-solid fa-envelope"></i></a>
-            <a href=""><i class="fa-solid fa-phone-flip"></i></a>
-        </div>
-    </div>
-</footer>
+    </footer>
 
 </html>
